fixed some responsiveness and layout issues with portfolio section

--- a/personalPage.css
+++ b/personalPage.css
@@ -304,6 +304,11 @@ body{
 
 #portfolioContentContainer{
     width: 80%;
+    height: 75%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 #current, #inProgress, #next{ 
@@ -349,6 +354,7 @@ body{
     width: 100%;
 
     display: flex;
+
     
 }
 
@@ -383,6 +389,8 @@ body{
     align-items: center;
 
     margin-top: 1%;
+
+    flex-grow: 2;
 }
 
 #projectContainer div{
@@ -431,6 +439,7 @@ body{
     font-family: "Passion One", sans-serif;
     text-decoration-color: #FF3b3F;
     text-align: center;
+    padding: 2.5%;
 }
 
 
@@ -490,7 +499,7 @@ body{
 /* Media Queries */
 /********************************************************************************************/
 @media only screen and (max-width: 480px){
-    #textContainer{ font-size: 25px; }
+    #textContainer{ font-size: 20px; }
     #aboutMeTxt{ font-size: 7px; }
     #me{
         border-radius: 100px;
@@ -499,9 +508,10 @@ body{
     }
     #aboutTitle, #portfolioTitle, #contactTitle{ letter-spacing: 1px; }
     #portfolioContentContainer .colored{ font-size: 30px; }
+
     #projectContainer div {
-        width: 150px;
-        height: 75px;
+        width: 200px;
+        height: 100px;
     }
     .colorBox p{ font-size: 35px; }
 }
@@ -517,8 +527,8 @@ body{
     #aboutTitle, #portfolioTitle, #contactTitle{ letter-spacing: 2px; }
     #portfolioContentContainer .colored{ font-size: 35px; }
     #projectContainer div {
-        width: 200px;
-        height: 100px;
+        width: 250px;
+        height: 175px;
     }
     .colorBox p{ font-size: 45px; }
 }
@@ -534,8 +544,8 @@ body{
     #aboutTitle, #portfolioTitle, #contactTitle{ letter-spacing: 3px; }
     #portfolioContentContainer .colored{ font-size: 40px; }
     #projectContainer div {
-        width: 250px;
-        height: 125px;
+        width: 300px;
+        height: 150px;
     }
     .colorBox p{ font-size: 55px; }
 }
@@ -554,8 +564,8 @@ body{
     #portfolioContentContainer .colored{ font-size: 45px; }
 
     #projectContainer div {
-        width: 300px;
-        height: 150px;
+        width: 350px;
+        height: 175px;
     }
 
     .colorBox p{ font-size: 65px; }
@@ -572,5 +582,24 @@ body{
     #aboutTxtContainer, #photoContainer{ margin: 0;  }
     #navBar{ display: none; }
     #hamburgerMenu{ display: block; }
-}
+
+    .drop{ flex-direction: column;
+               margin-bottom: 2.5%;
+    }
+
+    .drop a{
+        border-bottom: #FF3b3F solid;
+        border-right: none;
+        border-left: none;
+    }
+
+    #current, #inProgress, #next {
+        width: 100%;
+        height: 0px;
+        overflow: hidden;
+    }
+
+    #projectContainer{
+        flex-direction: column;
+    }
 
